--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "helmet-head",
-  "version": "0.3.8",
-  "homepage": "https://github.com/alfed7/helmet-head",
-  "repository": "https://github.com/alfed7/helmet-head",
-  "author": "Alexander Fedorenko",
+  "name": "@react5/helmet",
+  "version": "0.4.3",
+  "homepage": "https://github.com/react5com/helmet",
+  "repository": "https://github.com/react5com/helmet",
+  "author": "React5",
   "license": "MIT",
   "private": false,
   "main": "dist/index.esm.js",
